--- a/styles.css
+++ b/styles.css
@@ -84,14 +84,23 @@ p {
 .product-list{
     display: flex;
     flex-direction: row;
-    
+    margin-bottom: 80px;
+    margin-top: 80px;
 }
 .product{
-width: 350px;
-border: 1px solid #ccc;
-border-radius: 10px;
-margin: auto 30px;
-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);  
+    width: 350px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    margin: auto 30px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+    transition: transform 0.5s ease-in-out;
+    transform: scale(1);  
+}
+.product:hover{
+    transform: scale(1.02);
+}
+.sobre-nosotros-espacio{
+    margin-bottom:100px;
 }
 
 .sobre-nosotros {
@@ -110,6 +119,8 @@ footer {
     text-align: center;
     padding: 10px;
     background-color: #f1f1f1;
+    border-radius: 5px;
+    margin-bottom: 5px;
 }
 
 .logo-contenedor {
@@ -121,17 +132,55 @@ footer {
     width: 300px;
     height: auto;
 }
+/* Carrusel */
+.carousel-contenedor {
+    width: 100%;
+    max-width: 80%;
+    margin: 0 auto;
+    overflow: hidden;
+}
 
 .carousel-inner {
-    display: flex; 
-    transition: transform 0.5s ease; 
+    display: flex;
+    transition: transform 0.5s ease;
+    width: calc(100% * 6 / 6); 
 }
 
-.carousel-contenedor img {
-    width: 100%; 
-    height: auto; 
-    max-height: 500px; 
+.carousel-item {
+    width: 33.3%; 
+    flex-shrink: 0; 
 }
+
+.carousel-image {
+    width: 100%; 
+    height: auto;
+    max-height: 500px;
+}
+
+.carousel-buttons {
+    text-align: center;
+    margin-top: 10px;
+}
+
+.carousel-buttons button {
+    background-color: #ff7850;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    margin: 0 5px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.carousel-buttons button:hover {
+    background-color: #ff9f70;
+}
+
+
+
+
+
+
 
 @media (max-width: 768px) {
     body {
@@ -149,18 +198,14 @@ font-size: 1rem;
 .product-tittle{
     font-size: 2.0rem;
     }
+
+ /* Articulos-Targetas */ 
+
 .product img {
     width: 100%; 
-    height: 50px; 
-    margin: 0 5px; 
-    
-
-}
-.imagenes-contenedor{
-    display: flex; 
-    justify-content: center; 
-    margin: 10 0; 
- 
+    height: 300px; 
+    object-fit: cover;
+    border-radius: 5px  5px 0px 0px; 
 }
 
 
@@ -219,6 +264,7 @@ footer {
     display: flex;
     flex-wrap: wrap; 
     justify-content: space-around; 
+    
 }
 
 .columna {
@@ -298,3 +344,15 @@ footer {
     height: auto; 
     margin-right: 8px; 
 }  
+/* Cambio de imágen de artículo */
+.imagen-secundaria {
+    display: none;
+}
+
+.imagenes-contenedor:hover .imagen-principal {
+    display: none; 
+}
+
+.imagenes-contenedor:hover .imagen-secundaria {
+    display: block;
+}
