--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,9 @@ body {
     justify-content:flex-start;
     min-height: 100vh;
 }
+a{
+    text-decoration: none;
+}
 
 nav ul {
     display: flex;
