--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,8 @@ p {
 
 .product-list{
     display: flex;
-    flex-direction: row;
+    /*flex-direction: row;*/
+    flex-wrap: wrap;
     margin-bottom: 80px;
     margin-top: 80px;
 }
@@ -147,7 +148,7 @@ footer {
 
 .carousel-image {
     width: calc(100% / 3); 
-    height: 100%; 
+    height: auto; 
     object-fit: cover; 
 }
 
@@ -177,13 +178,34 @@ footer {
 }
 
 
-@media (max-width: 768px) {
-    body {
-        font-size: 14px;
-    }
 
+body {
+    font-size: 16px; 
+}
+
+h1 {
+    font-size: 3rem; 
+}
+
+
+@media (max-width: 600px) {
+    body {
+        font-size: 14px; 
+    }
+    
     h1 {
-        font-size: 3rem;
+        font-size: 3rem; 
+    }
+}
+
+
+@media (min-width: 601px) and (max-width: 900px) {
+    body {
+        font-size: 15px; 
+    }
+    
+    h1 {
+        font-size: 2.5rem; 
     }
 }
 
